--- a/python-learning/list.ipynb
+++ b/python-learning/list.ipynb
@@ -2,57 +2,83 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nadeem\n"
+      "['nadeem', 'salman', 'fahad', 'haroon']\n"
      ]
     }
    ],
    "source": [
-    "fruits = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['apple', 'banana', 'cherry', 'date']\n"
-     ]
-    }
-   ],
-   "source": [
-    "fruits: list = ['apple','banana','cherry','date']\n",
+    "fruits: list = ['nadeem','salman','fahad','haroon']\n",
     "print(fruits)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['apple', 'banana']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NADEEM\n",
+      "SALMAN\n",
+      "FAHAD\n",
+      "HAROON\n"
+     ]
     }
    ],
    "source": [
-    "fruits[:-2]"
+    "for fol in fruits:\n",
+    "    print(fol.upper())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " nadeemis my best friend\n",
+      " salmanis my best friend\n",
+      " fahadis my best friend\n",
+      " haroonis my best friend\n",
+      " waseemis my best friend\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"nadeem\",\"salman\",\"fahad\",\"haroon\",\"waseem\"]\n",
+    "for x in fruits:\n",
+    "    print(f\" {x}is my best friend\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'a', 'b', 'c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = [\"a\", \"a\", \"b\", \"b\", \"c\"]\n",
+    "del arr[2]\n",
+    "print(arr)"
    ]
   }
  ],
